# BrightnessControl

./: .session  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  config_template.toml
.github/workflows/: release.yml
src/: client.rs  daemon.rs  lib.rs  main.rs  shared.rs
src/client/: core.rs  mod.rs
src/daemon/: fs.rs  mod.rs
src/daemon/config/: mod.rs  persistent.rs  runtime.rs
src/daemon/core/: core.rs  display.rs  mod.rs
src/daemon/util/: atomic.rs  io.rs  lock.rs  mod.rs
