[package]
name = "brightness_control"
version = "2.0.0-alpha0"
authors = ["Sridaran Thoniyil <sri7thon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "2.0.2"
clap = "2.33.3"
daemonize = "0.4.1"
serde = { version = "1.0.1", features = ["derive"] }
bincode = "1.3.1"
signal-hook = "0.1.1"
toml = "0.5.6"
lazy_static = "1.4.0"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["net"] }
futures = "0.3.7"
fnv = "1.0.7"
# crates.io version is out of date: 1.16
fields-converter-derive = { git = "https://gitlab.com/mexus/fields-converter.git", rev = "a4f8527f" }

[dependencies.regex]
version = "1.4.1"
 # disabling unicode
default-features = false
features = ["perf", "std"]
