[package]
name = "brightness_control"
version = "2.3.0"
authors = ["Sridaran Thoniyil <sri7thon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "2"
clap = "2"
daemonize = "0"
serde = { version = "1", features = ["derive"] }
bincode = "1"
signal-hook = "0"
signal-hook-tokio = { version = "0", features = ["futures-v0_3"] }
toml = "0"
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["net"] }
futures = "0"
fnv = "1"
# crates.io version is out of date: 1.16
fields-converter-derive = { git = "https://gitlab.com/mexus/fields-converter.git", rev = "a4f8527f" }

[dependencies.regex]
version = "1"
 # disabling unicode
default-features = false
features = ["perf", "std"]
